# plex_restful

./: .gitignore  pyproject.toml
src/plex_restful/: __init__.py  app.py  config.py  main.py  test.py  utils.py
src/plex_restful/api/: database.py  endpoints.py  endpoints_scratch.py  models.py  models_example.py  populate.py  populate_scratch.py
src/plex_restful/api/database/: __init__.py  models.py  populate.py  populate_data.py  tables.py
src/plex_restful/api/database/models/: __init__.py  associations.py  audio.py  photo.py  playlist.py  playlists.py  video.py
src/plex_restful/api/database/populate/: audio_data.py  photo_data.py  playlist_types.py  video_data.py
src/plex_restful/apps/default/: routes.py
src/plex_restful/apps/refresh/: routes.py
src/plex_restful/database/: __init__.py  extensions.py  helpers.py  models.py  parsers.py  populate.py
src/plex_restful/plex/: __init__.py  authentication.py  data.py  server.py  store_data.py  store_data_example.py
src/plex_restful/templates/: index.html
src/plex_restful/utils/: logging.py
tests/.plex_cred/: credentials.json
