[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask_tree_test"
description = "A CLI tool to create empty Python projects"
authors = [{name = "USERNAME", email = "USERNAME@example.com"}]
license = {text = "MIT"}
version = "0.1.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "click",
    "colorlog",
    "flask",
    "flask_cors",
    "flask-migrate",
    "flask-restful",
    "flask-sqlalchemy",
    "flask-wtf",
    "plexapi",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "tox",
    "build",
    "pytest",
    "coverage"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
pra = "plex_restful.main:main"
test1 = "plex_restful.test:test1"
test2 = "plex_restful.test:test2"
test3 = "plex_restful.test:test3"
test4 = "plex_restful.test:test4"

[project.urls]
homepage = "https://example.com"

[tool.setuptools]
include-package-data = true
platforms = ["any"]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = true
where = ["src"]
